finished personal website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- start top area -->
     <section class="top-area">
         <div class="half-width">
             <h1>Hello I'm</h1>
@@ -18,8 +19,9 @@
             <img src="./img/h1.png" alt="">
         </div>
     </section>
+    <!-- end top area -->
 
-
+    <!-- start biography-area  -->
     <section class="biography-area">
         <div class="half-width">
             <img src="./img/h2.png" alt="">
@@ -31,5 +33,44 @@
             <button class="btn">Download CV</button>
         </div>
     </section>
+    <!-- end biography-area  -->
+
+    <!-- start my work area -->
+     <section class="my-work-area">
+        <h2>My Latest Work</h2>
+        <div class="single-work-area">
+            <div class="single-work">
+                <img src="/img/latest-work/work-1.png" alt="">
+            </div>
+            <div class="single-work">
+                <img src="/img/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="single-work">
+                <img src="/img/latest-work/work-3.jpg" alt="">
+            </div>
+        </div>
+     </section>
+    <!-- end my work area -->
+
+    <!-- start client area -->
+     <section class="client-area" id="client">
+        <h2>What Client Are Say</h2>
+        <h3>Bruce Moccy</h3>
+        <h4>Founder & CEO Alies</h4>
+        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Beatae sapiente laborum recusandae fugit aspernatur nulla."</p>
+
+        <div class="leave-program">
+            <p>Leave me a message in the</p>
+            <h3>somrathumayan@gmail.com</h3>
+        </div>
+
+     </section>
+    <!-- end client area -->
+
+    <!-- start footer area -->
+     <footer>
+        <p>Humayan. © 2024 All rights Reserved</p>
+     </footer>
+    <!-- end footer area -->
 </body>
 </html>
